<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iDetective</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">Nyt spil!</string>
    <string name="highscore">Highscores</string>
    <string name="settings">Indstillinger</string>
    <string name="title_activity_list_of_games">ListOfGames</string>
    <string name="join_game_list_title">Vælg et spil</string>
    <string name="title_activity_waiting_for_players_list">WaitingForPlayersList</string>
    <string name="waiting_for_players_list_title">Venter på spillere</string>
    <string name="title_activity_new_join_game">NewJoinGame</string>
    <string name="newGame">Nyt spil</string>
    <string name="joinGame">Join spil</string>
    <string name="name">Navn</string>
    <string name="general">Generelt</string>
    <string name="prefNameSummary">Ændre spilnavn</string>
    <string name="startbtn">Start</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="new_game_textview">Her opretter du et nyt spil. Indtast det ønskede navn for spilsessionen. Tryk derefter start!</string>
    <string name="create_game_btn">Opret spil!</string>
    <string name="your_id">Bruger ID</string>
    <string name="title_activity_highscores">Highscores</string>
    <string name="highscores_title">Highscores</string>
    <string name="title_activity_maps">Maps</string>
    <string name="refreshbtn">Opdater</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="xenia_persson">Xenia Persson</string>
    <string name="pet">PET</string>
    <string name="answerCall">Besvar opkald</string>
    <string name="title_activity_cutscene">CutsceneActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_proffessor_puzzle">ProffessorPuzzleActivity</string>

</resources>
