<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#5E5E5E" >

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/highscoreBtn"
        android:layout_marginBottom="50dp"
        android:text="@string/new_game"
        android:background="#CCCCCC" />

    <Button
        android:id="@+id/highscoreBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/highscore"
        android:background="#CCCCCC" />

    <Button
        android:id="@+id/settingBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscoreBtn"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:background="#CCCCCC" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newGameBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

</RelativeLayout>
